# XZ_Utils_Unofficial

./: .editorconfig  .gitignore  CMakeLists.txt  TODO  configure.ac
.github/workflows/: ci.yml
doc/examples/: 01_compress_easy.c  02_decompress.c  03_compress_custom.c  04_compress_easy_mt.c
src/liblzma/: liblzma.map
src/liblzma/api/lzma/: base.h  bcj.h  container.h  delta.h  filter.h  lzma12.h  stream_flags.h
src/liblzma/common/: Makefile.inc  block_buffer_encoder.c  block_buffer_encoder.h  block_encoder.c  common.c  common.h  filter_common.c  filter_decoder.c  filter_encoder.c  filter_str_conversion.c  outqueue.c  stream_decoder.c  stream_decoder_mt.c  stream_encoder_mt.c  stream_flags_common.c  stream_flags_encoder.c  strerror.c
src/liblzma/lzma/: lzma2_encoder.c  lzma_encoder.c  lzma_encoder.h
src/liblzma/simple/: Makefile.inc  arm64.c  simple_coder.h
src/xz/: args.c  coder.c  coder.h  list.c  message.c  message.h
tests/: Makefile.am  README  code_coverage.sh  create_compress_files  liblzma_tests  liblzma_tests.c  liblzma_tests.h  test_bcj_exact_size  test_bcj_exact_size.c  test_block.c  test_block_header  test_block_header.c  test_check  test_check.c  test_filter_flags  test_filter_flags.c  test_index  test_index.c  test_lzma_filter_str_conversion.c  test_lzma_filter_utils.c  test_lzma_filter_utils.h  test_lzma_filters.c  test_lzma_properties.c  test_lzma_raw.c  test_mt_decoder.c  test_mt_encoder.c  test_stream_flags  test_stream_flags.c  test_utils.c  test_utils.h  test_xz_compress.c  test_xz_decompress.c  tests.h  tmp_compressed  tmp_compressed_cmp  xz_tests  xz_tests.c  xz_tests.h
tests/files/: README  small_text.txt  small_text.txt.xz
tests/files/lzma_block/: text.xz
tests/files/lzma_filters/: README  lzma1_alone_raw  lzma1_raw  lzma2_raw
tests/files/multithreaded/: abc.xz  combined.xz  large_random  large_random.xz  random.xz  random_corrupt_contents.xz  random_corrupt_truncated.xz  random_partial_headers  random_partial_headers.xz  random_st.xz  text.xz  text_no_check.xz  text_unsupported_check.xz
tests/stest/: stest.c  stest.h
